# qhw-code

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
qhw/: CMakeLists.txt  alap.cpp  cholmod_l.cpp  cholmod_l.h  cholmod_plus.cpp  cholmod_plus.h  matrix.cpp  matrix.h  matrix_dense.cpp  mesh.cpp  mesh.h  qhw.cpp  timer.h
